configs/kuard.ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kuard
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/use-http2: "true"

spec:
  tls:
  - hosts:
    - mareep.umibiraki.xyz
    secretName: kuard-ingress-tls
  rules:
  - host: mareep.umibiraki.xyz
    http:
      paths:
      - path: /
        backend:
          serviceName: kuard
          servicePort: 80
